solc_ossfuzz_seed_corpus/test_sol/test_da98b2c7d0787d0677739e2240a9c36d0eab43dca0d438fbd9bff8abc3cca085_d4c9f14efcb3e7b96a65b6dc915c464ad0862fe5_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma abicoder v2;
pragma solidity >= 0.0.0;
function f0(bytes6 i0,int216 i1,bytes8 i2)  returns(function () external o0,int184 o1)
{
  i1 -= ((33689433174067491873332602562979357035755159738030747853142759297 + (-49710088781485997275994937518127865385302969958907401514215248883 * (-10800472510605959015797081642197883252770054958602145757647440998 / -19381218045873933671192407243972633157723082539800584332549999949))) * 48413141579218859695504134353897485653296151887775404054114080494);
}
// ----
// TypeError 7366: (su0.sol:137-491): Operator -= not compatible with types int216 and rational_const 1872...(185 digits omitted)...5262 / 6460...(56 digits omitted)...9983
